--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="<link rel= preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">">
     <title>Carros</title>
 </head>
 <body>
@@ -16,17 +20,17 @@
         </section>
 
         <section class="suvs">
-            <img src="" alt="">
-            <h2></h2>
-            <p></p>
-            <a href=""></a>
+            <img src="./imagens (1)/imagens/icon-suvs.svg" alt="carro suv">
+            <h2>SUVS</h2>
+            <p>Escolha um SUV pelo seu interior espaçoso, poder e versatilidade. Perfeito para passar as férias em família ou para aventuras off-road.</p>
+            <a href="">Ver mais</a>
         </section>
 
         <section class="luxuosos">
- <img src="" alt="">
-            <h2></h2>
-            <p></p>
-            <a href=""></a>
+            <img src="./imagens (1)/imagens/icon-luxury.svg" alt="carro de luxo">
+            <h2>Luxuosos</h2>
+            <p>Passeie nos melhores carros sem os preços exorbitantes. Desfrute do conforto aprimorado de um aluguel de luxo e chegue com estilo.</p>
+            <a href="">Ver mais</a>
         </section>
     </main>
 </body>
